@@ -20,6 +20,7 @@ CAY-2365 SQLExec query tries to convert (unexpected) result set into objects
 CAY-2367 ClassCastException reading object with an attribute of type 'char'
 CAY-2368 ColumnSelect: Property.self() translates into wrong SQL code
 CAY-2370 ValueObjectType for byte[] fails lookup
+CAY-2382 Lack of synchronization in DataContext serialization
 
 ----------------------------------
 Release: 4.0.B2
